Fix duplicate docs page scrollbars.

--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -110,14 +110,18 @@
   }
 
   html {
+    height: 100%;
     min-width: 320px;
+    overflow: hidden;
     background: var(--background);
     -webkit-font-smoothing: antialiased;
   }
 
   body {
     position: relative;
+    height: 100%;
     margin: 0;
+    overflow: hidden;
     color: var(--foreground);
     background: var(--background);
     font-family: var(--font-sans);
